--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ padding-top:100px;
     padding-top:100px;
     background-color:rgb(32, 32, 32);
       background-size:auto;
-      
+      height:100vh;
       
          background-position:center center;
          background-repeat:no-repeat;
@@ -75,12 +75,10 @@ padding-top:100px;
 hr{
     color:white;
 }
-.Third div{
-    
-    
-}
+
 .Third-1
 {
+    height:100vh;
     padding-top:100px;
     background-image: url("images/wood.jpg");
     background-size:cover;
@@ -93,6 +91,7 @@ hr{
 }
 
 .Third-2{
+    height:100vh;
     padding-top:100px;
     background-image: url("images/sand.jpg");
     background-size:cover;
@@ -106,6 +105,7 @@ hr{
 }
 .Third-3
 {
+    height:100vh;
     padding-top:100px;
     background-image: url("images/ice2.jpg");
     background-size:cover;
