--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ padding-top:100px;
 .Third
 {
     padding-top:100px;
-    background-image: url("images/sand.jpg");
+    background-image: url("images/sand_op.jpg");
     background-size:cover;
     background-position:center center;
     background-repeat:no-repeat;
@@ -71,7 +71,7 @@ padding-top:100px;
 {
    
     padding-top:100px;
-    background-image: url("images/wood.jpg");
+    background-image: url("images/wood_op.jpg");
     background-size:cover;
     background-position:center center;
     background-repeat:no-repeat;
@@ -84,7 +84,7 @@ padding-top:100px;
 .Third-2{
   
     padding-top:100px;
-    background-image: url("images/sand.jpg");
+    background-image: url("images/sand_op.jpg");
     background-size:cover;
     background-position:center center;
     background-repeat:no-repeat;
@@ -98,7 +98,7 @@ padding-top:100px;
 {
    
     padding-top:100px;
-    background-image: url("images/ice2.jpg");
+    background-image: url("images/ice2_op.jpg");
     background-size:cover;
     background-position:center center;
     background-repeat:no-repeat;
